force-app/main/default/objects/Balance__c/Balance__c.object-meta.xml
<CustomObject>
    <label>Balance Sheet</label>
    <nameField>
        <label>Date</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Balance Sheets</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>