force-app/main/default/objects/Balance__c/fields/afterContribution__c.field-meta.xml
<CustomField>
    <fullName>afterContribution__c</fullName>
    <label>Balance After Contribution</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>