force-app/main/default/objects/Balance__c/fields/afterFee__c.field-meta.xml
<CustomField>
    <fullName>afterFee__c</fullName>
    <label>Balance After Fee</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>