force-app/main/default/objects/Balance__c/fields/afterGrowth__c.field-meta.xml
<CustomField>
    <fullName>afterGrowth__c</fullName>
    <label>Balance After Growth</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>