force-app/main/default/objects/Balance__c/fields/afterICR__c.field-meta.xml
<CustomField>
    <fullName>afterICR__c</fullName>
    <label>Balance After ICR</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>