force-app/main/default/objects/Balance__c/fields/afterTax__c.field-meta.xml
<CustomField>
    <fullName>afterTax__c</fullName>
    <label>Balance After Tax</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>