force-app/main/default/objects/Balance__c/fields/Calculator__c.field-meta.xml
<CustomField>
    <fullName>Calculator__c</fullName>
    <label>Calculator</label>
    <referenceTo>SuperannuationCalculator__c</referenceTo>
    <relationshipLabel>Balance Sheets</relationshipLabel>
    <relationshipName>Balance</relationshipName>
    <relationshipOrder>0</relationshipOrder>
    <reparentableMasterDetail>true</reparentableMasterDetail>
    <type>MasterDetail</type>
</CustomField>