force-app/main/default/objects/Balance__c/fields/start__c.field-meta.xml
<CustomField>
    <fullName>start__c</fullName>
    <label>Balance at Start</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>